logging/local/elasticsearch-sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: logging
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: node.efk.io/elasticsearch-storage-ready
                  operator: Exists
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: k8s-app
                    operator: In
                    values:
                      - elasticsearch
              topologyKey: "kubernetes.io/hostname"
      volumes:
        - name: elasticsearchdata
          hostPath:
            path: /home/elasticsearch
            type: DirectoryOrCreate
      containers:
        - name: elasticsearch
          resources:
            # need more cpu upon initialization, therefore burstable class
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
