logging/local/fluent-bit-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: logging
spec:
  template:
    spec:
      containers:
        - name: fluent-bit
          volumeMounts:
            - name: homedockercontainers
              mountPath: /home/docker/containers
              readOnly: true
      volumes:
        - name: homedockercontainers
          hostPath:
            path: /home/docker/containers
